# nomi

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  specs.md
.github/workflows/: ci.yml
backend/: .env.example  Dockerfile  migrate.py  pyproject.toml  railway.toml
backend/alembic/: env.py
backend/alembic/data_migrations/: README.md
backend/alembic/versions/: 001_initial_schema.py  002_uuid_user_id.py  003_add_last_synced_at.py
backend/app/: config.py  database.py  main.py
backend/app/middleware/: rate_limit.py
backend/app/models/: __init__.py  bank_link.py  category.py  plaid_mapping.py  transaction.py  user.py
backend/app/routers/: admin.py  auth.py  categories.py  plaid_mappings.py  transactions.py  users.py
backend/app/schemas/: category.py  plaid_mapping.py  transaction.py  user.py
backend/app/services/: auth_service.py  plaid_service.py
backend/tests/: conftest.py  test_admin.py  test_categories.py  test_transactions.py  test_users.py
frontend/: .env.example  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  railway.toml  tailwind.config.js
frontend/scripts/: generate-env.js
frontend/src/: App.tsx  main.tsx  vite-env.d.ts
frontend/src/constants/: plaidCategories.ts
frontend/src/context/: AuthContext.tsx  ThemeContext.tsx  TopBarActionsContext.tsx
frontend/src/hooks/: useCategories.ts  useIsDesktop.ts  useNewTransactions.ts  usePlaidMappings.ts  usePlaidModalConstraint.ts  useTransactions.ts
frontend/src/lib/: features.ts  utils.ts
frontend/src/pages/: Admin.tsx  AuthCallback.tsx  (+7 more)
(+32 files in other folders)
