[project]
name = "dobby-backend"
version = "0.1.0"
description = "Dobby expense tracking backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "python-dotenv>=1.0.0",
    "slowapi>=0.1.9",
    "plaid-python>=16.0.0",
    "supabase>=2.3.0",
    "python-jose[cryptography]>=3.3.0",
    "httpx>=0.27.0",
    "pydantic[email]>=2.7.0",
    "pydantic-settings>=2.2.0",
    "aiosqlite>=0.20.0",
    "greenlet>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
    "pre-commit>=3.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501", "F821"]  # F821: SQLAlchemy forward-reference strings trigger false positives

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
